--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <title>Exact Auto Glass</title>
+        <title>Admin Dashboard</title>
 
         <meta name="description" content="">
 
