--- a/index.html
+++ b/index.html
@@ -22,6 +22,68 @@
 
     <link id="theme-style" rel="stylesheet" href="assets/css/portal.css">
 
+	<script>
+		window.onload = function () {
+		
+		var chart = new CanvasJS.Chart("chartContainer", {
+			animationEnabled: true,
+			
+			axisX: {
+				minimum: new Date(2020, 0),
+				maximum: new Date(2020, 08),
+				valueFormatString: "MMM"
+			},
+			axisY: {
+				suffix: "k",
+			},
+			legend: {
+				verticalAlign: "top",
+				horizontalAlign: "right",
+				dockInsidePlotArea: true
+			},
+			toolTip: {
+				shared: true
+			},
+			data: [{
+				type: "splineArea",
+				color: "rgba(0, 235, 183, 0.8)",
+				dataPoints: [
+					{ x: new Date(2020, 0), y: 60 },
+					{ x: new Date(2020, 1), y: 60 },
+					{ x: new Date(2020, 2), y: 40 },
+					{ x: new Date(2020, 3), y: 60 },
+					{ x: new Date(2020, 4), y: 40 },
+					{ x: new Date(2020, 5), y: 60 },
+					{ x: new Date(2020, 6), y: 40 },
+					{ x: new Date(2020, 7), y: 60 },
+					{ x: new Date(2020, 8), y: 40 },
+					{ x: new Date(2020, 9), y: 60 },
+					{ x: new Date(2020, 10), y: 60 }
+				]
+			},
+			{
+				type: "spline",
+				color: "#0d6efd",
+      			indexLabelFontSize: 16,
+				dataPoints: [
+					{ x: new Date(2020, 0), y: 60 },
+					{ x: new Date(2020, 1), y: 40 },
+					{ x: new Date(2020, 2), y: 60 },
+					{ x: new Date(2020, 3), y: 40 },
+					{ x: new Date(2020, 4), y: 60 },
+					{ x: new Date(2020, 5), y: 40 },
+					{ x: new Date(2020, 6), y: 60 },
+					{ x: new Date(2020, 7), y: 40 },
+					{ x: new Date(2020, 8), y: 60 },
+					{ x: new Date(2020, 9), y: 40 }
+				]
+			}]
+		});
+		chart.render();
+		
+		}
+	</script>
+
 </head> 
 
 <body class="app">   	
@@ -477,7 +539,9 @@
 									<div class="app-card-body p-3 p-lg-4">
 		
 										<img src="assets/img/rev-growth.png" class="img-fluid graph-img" alt="rev-growth">
-		
+
+										<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+										
 										<!-- <div class="chart-container">
 											<canvas id="canvas-linechart" ></canvas>
 										</div> -->
@@ -749,6 +813,7 @@
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 
+	<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
 	<script type="text/javascript">
 		$(function() {
