--- a/index.html
+++ b/index.html
@@ -20,69 +20,11 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css">
+
     <link id="theme-style" rel="stylesheet" href="assets/css/portal.css">
 
-	<script>
-		window.onload = function () {
-		
-		var chart = new CanvasJS.Chart("chartContainer", {
-			animationEnabled: true,
-			
-			axisX: {
-				minimum: new Date(2020, 0),
-				maximum: new Date(2020, 08),
-				valueFormatString: "MMM"
-			},
-			axisY: {
-				suffix: "k",
-			},
-			legend: {
-				verticalAlign: "top",
-				horizontalAlign: "right",
-				dockInsidePlotArea: true
-			},
-			toolTip: {
-				shared: true
-			},
-			data: [{
-				type: "splineArea",
-				color: "rgba(0, 235, 183, 0.8)",
-				dataPoints: [
-					{ x: new Date(2020, 0), y: 60 },
-					{ x: new Date(2020, 1), y: 60 },
-					{ x: new Date(2020, 2), y: 40 },
-					{ x: new Date(2020, 3), y: 60 },
-					{ x: new Date(2020, 4), y: 40 },
-					{ x: new Date(2020, 5), y: 60 },
-					{ x: new Date(2020, 6), y: 40 },
-					{ x: new Date(2020, 7), y: 60 },
-					{ x: new Date(2020, 8), y: 40 },
-					{ x: new Date(2020, 9), y: 60 },
-					{ x: new Date(2020, 10), y: 60 }
-				]
-			},
-			{
-				type: "spline",
-				color: "#0d6efd",
-      			indexLabelFontSize: 16,
-				dataPoints: [
-					{ x: new Date(2020, 0), y: 60 },
-					{ x: new Date(2020, 1), y: 40 },
-					{ x: new Date(2020, 2), y: 60 },
-					{ x: new Date(2020, 3), y: 40 },
-					{ x: new Date(2020, 4), y: 60 },
-					{ x: new Date(2020, 5), y: 40 },
-					{ x: new Date(2020, 6), y: 60 },
-					{ x: new Date(2020, 7), y: 40 },
-					{ x: new Date(2020, 8), y: 60 },
-					{ x: new Date(2020, 9), y: 40 }
-				]
-			}]
-		});
-		chart.render();
-		
-		}
-	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 
 </head> 
 
@@ -414,6 +356,7 @@
 											</div>
 											<div class="stats-graph">
 												<img src="assets/img/stats-graph.png" class="img-fluid" alt="total-sale">
+												<table id="line-example-1" class="charts-css line hide-data"><caption> Line Example #1 </caption> <tbody><tr><td style="--start:0; --size:0.4;"><span class="data"> $ 40K </span></td></tr> <tr><td style="--start:0.4; --size:0.2;"><span class="data"> $ 20K </span></td></tr> <tr><td style="--start:0.2; --size:0.6;"><span class="data"> $ 60K </span></td></tr> <tr><td style="--start:0.6; --size:0.4;"><span class="data"> $ 40K </span></td></tr> <tr><td style="--start:0.4; --size:0.8;"><span class="data"> $ 80K </span></td></tr> <tr><td style="--start:0.8; --size:0.6;"><span class="data"> $ 60K </span></td></tr> <tr><td style="--start:0.6; --size:1;"><span class="data"> $ 100K </span></td></tr></tbody></table>
 											</div>
 										</div>
 									</div>
@@ -668,7 +611,8 @@
 										</div>
 										<div class="stats-content">
 											<div class="stats-graph mx-auto">
-												<img src="assets/img/activities.png" class="img-fluid" alt="activities">
+<!--												<img src="assets/img/activities.png" class="img-fluid" alt="activities">-->
+												<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
 											</div>
 										</div>
 										<div class="d-flex mt-3 align-items-center">
@@ -814,6 +758,30 @@
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 
 	<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
+
+
+	<script>
+		var xValues = ["online", "oline", "online"];
+		var yValues = [56, 49, 19];
+		var barColors = [
+			"#37D39D",
+			"#4D4FF1",
+			"#DADADA",
+			"#e8c3b9",
+			"#1e7145"
+		];
+
+		new Chart("myChart", {
+			type: "doughnut",
+			data: {
+				datasets: [{
+					backgroundColor: barColors,
+					data: yValues
+				}]
+			}
+		});
+	</script>
 
 	<script type="text/javascript">
 		$(function() {
