--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 								<div class="app-card app-card-stat">
 									<div class="app-card-body p-3">
 										<div class="stats-image">
-											<img src="assets/img/total-sale.png" class="img-fluid" alt="total-sale">
+											<img src="assets/img/total-exp.png" class="img-fluid" alt="total-sale">
 											<p>-10%</p>
 										</div>
 										<div class="stats-content">
@@ -463,7 +463,7 @@
 								<div class="app-card app-card-stat">
 									<div class="app-card-body p-3">
 										<div class="stats-image">
-											<img src="assets/img/total-sale.png" class="img-fluid" alt="total-sale">
+											<img src="assets/img/total-rev.png" class="img-fluid" alt="total-sale">
 											<p>-02%</p>
 										</div>
 										<div class="stats-content">
@@ -486,7 +486,7 @@
 								<div class="app-card app-card-stat">
 									<div class="app-card-body p-3">
 										<div class="stats-image">
-											<img src="assets/img/total-sale.png" class="img-fluid" alt="total-sale">
+											<img src="assets/img/sold-product.png" class="img-fluid" alt="total-sale">
 											<p>-02%</p>
 										</div>
 										<div class="stats-content">
