new compagin email

--- a/email-campaigns.html
+++ b/email-campaigns.html
@@ -370,7 +370,7 @@
                                 </div>
         
                                 <div class="col-lg-4 col-md-12">						    
-                                    <a href="#" class="btn btn-email-campaign">New Campaign</a>
+                                    <a href="https://mailchimp.com/" target="_blank" rel="noopener noreferrer" class="btn btn-email-campaign">New Campaign</a>
                                 </div>
         
                             </div>
