--- a/account-information.html
+++ b/account-information.html
@@ -229,7 +229,7 @@
 
 						<!--nav-item-->
 					    <li class="nav-item">
-					        <a class="nav-link" href="#">
+					        <a class="nav-link" href="account-information.html">
 						        <span class="nav-icon">
 									<img src="assets/img/info-circle.png" class="img-fluid" alt="info circle">
 								</span>
