--- a/account-information.html
+++ b/account-information.html
@@ -109,7 +109,7 @@
 					    </li>
 						<!--nav-item-->
 					    <li class="nav-item">
-					        <a class="nav-link active" href="orders.html">
+					        <a class="nav-link" href="orders.html">
 						        <span class="nav-icon">
 									<img src="assets/img/shopping-cart.png" class="img-fluid" alt="shopping-cart">
 								</span>
@@ -229,7 +229,7 @@
 
 						<!--nav-item-->
 					    <li class="nav-item">
-					        <a class="nav-link" href="account-information.html">
+					        <a class="nav-link active" href="account-information.html">
 						        <span class="nav-icon">
 									<img src="assets/img/info-circle.png" class="img-fluid" alt="info circle">
 								</span>
