video course added

--- a/email-campaigns.html
+++ b/email-campaigns.html
@@ -221,7 +221,7 @@
 
 						<!--nav-item-->
 					    <li class="nav-item">
-					        <a class="nav-link" href="#">
+					        <a class="nav-link" href="video-course.html">
 						        <span class="nav-icon">
 									<img src="assets/img/file-video.png" class="img-fluid" alt="video course">
 								</span>
