--- a/video-course.html
+++ b/video-course.html
@@ -205,7 +205,7 @@
 
 						<!--nav-item-->
 					    <li class="nav-item">
-					        <a class="nav-link" href="#">
+					        <a class="nav-link active" href="video-course.html">
 						        <span class="nav-icon">
 									<img src="assets/img/file-video.png" class="img-fluid" alt="video course">
 								</span>
@@ -229,7 +229,7 @@
 
 						<!--nav-item-->
 					    <li class="nav-item">
-					        <a class="nav-link active" href="account-information.html">
+					        <a class="nav-link" href="account-information.html">
 						        <span class="nav-icon">
 									<img src="assets/img/info-circle.png" class="img-fluid" alt="info circle">
 								</span>
