--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 					    </li>
 						<!--nav-item-->
 					    <li class="nav-item">
-					        <a class="nav-link" href="#">
+					        <a class="nav-link" href="profit-calculator.html">
 						        <span class="nav-icon">
 									<img src="assets/img/calculator-alt.png" class="img-fluid" alt="calculator">
 								</span>
