--- a/products.html
+++ b/products.html
@@ -675,7 +675,7 @@
 
 										</div>
                                         
-										<div class="chart-container">
+										<!-- <div class="chart-container">
 											<canvas id="canvas-barchart" style="height: 50rem;"></canvas>
 										</div>
 
@@ -683,9 +683,9 @@
 											<div class="stats-graph mx-auto">
 												<canvas id="myChart" style="width:100%;height: 12.6rem"></canvas>
 											</div>
-										</div>
+										</div> -->
 
-                                        <p class="mt-4">Inventory Value </p>
+                                        <p class="mt-5">Inventory Value </p>
                                         <p class="inventory">$479.94</p>
                                         <p class="setting-payment">Update your payout method in Settings</p>
 
