--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 				animationEnabled: true,
 				axisX: {
 					valueFormatString: "MMM",
-					minimum: new Date(2017, 0, 5, 23),
-					maximum: new Date(2017, 8, 12, 1),
+					minimum: new Date(2017, 0),
+					maximum: new Date(2017, 12),
 					labelFontColor: "#fff"
 				},
 				axisY:{
@@ -52,45 +52,78 @@
 				toolTip: {
 					shared: true
 				},
-				data: [{
-					labelFontColor: "#fff",
-					name: "Present Year",
-					showInLegend: true,
-					legendMarkerType: "square",
-					type: "splineArea",
-					color: "rgba(40,175,101,0.6)",
-					markerSize: 0,
-					dataPoints: [
-						{ x: new Date(2017, 0, 6), y: 20 },
-						{ x: new Date(2017, 1, 7), y: 40 },
-						{ x: new Date(2017, 2, 8), y: 60 },
-						{ x: new Date(2017, 3, 9), y: 75 },
-						{ x: new Date(2017, 4, 10), y: 60 },
-						{ x: new Date(2017, 5, 11), y: 65 },
-						{ x: new Date(2017, 6, 6), y: 55 },
-						{ x: new Date(2017, 7, 7), y: 60 },
-						{ x: new Date(2017, 8, 8), y: 65 }
-					]
-				},
+				data: [
 					{
-						name: "Last year",
+						labelFontColor: "#fff",
+						name: "Revenue",
 						showInLegend: true,
 						legendMarkerType: "square",
-						type: "splineArea",
+						type: "area",
 						color: "rgba(0,75,141,0.7)",
 						markerSize: 0,
 						dataPoints: [
-							{ x: new Date(2017, 0, 6), y: 40 },
-							{ x: new Date(2017, 1, 7), y: 60 },
-							{ x: new Date(2017, 2, 8), y: 40 },
-							{ x: new Date(2017, 3, 9), y: 60 },
-							{ x: new Date(2017, 4, 10), y: 60 },
-							{ x: new Date(2017, 5, 11), y: 75 },
-							{ x: new Date(2017, 6, 6), y: 72 },
-							{ x: new Date(2017, 7, 7), y: 55 },
-							{ x: new Date(2017, 8, 8), y: 60 }
+							{ x: new Date(2017, 0), y: 80 },
+							{ x: new Date(2017, 1), y: 80 },
+							{ x: new Date(2017, 2), y: 80 },
+							{ x: new Date(2017, 3), y: 75 },
+							{ x: new Date(2017, 4), y: 60 },
+							{ x: new Date(2017, 5), y: 85 },
+							{ x: new Date(2017, 6), y: 95 },
+							{ x: new Date(2017, 7), y: 70 },
+							{ x: new Date(2017, 8), y: 75 },
+							{ x: new Date(2017, 9), y: 85 },
+							{ x: new Date(2017, 10), y: 87 },
+							{ x: new Date(2017, 11), y: 80 },
+							{ x: new Date(2017, 12), y: 87 }
 						]
-					}]
+					},
+					{
+						name: "Profit",
+						showInLegend: true,
+						legendMarkerType: "square",
+						type: "area",
+						color: "rgba(40,175,101,0.6)",
+						markerSize: 0,
+						dataPoints: [
+							{ x: new Date(2017, 0), y: 60 },
+							{ x: new Date(2017, 1), y: 60 },
+							{ x: new Date(2017, 2), y: 40 },
+							{ x: new Date(2017, 3), y: 60 },
+							{ x: new Date(2017, 4), y: 60 },
+							{ x: new Date(2017, 5), y: 75 },
+							{ x: new Date(2017, 6), y: 72 },
+							{ x: new Date(2017, 7), y: 55 },
+							{ x: new Date(2017, 8), y: 60 },
+							{ x: new Date(2017, 9), y: 68 },
+							{ x: new Date(2017, 10), y: 58 },
+							{ x: new Date(2017, 11), y: 58 },
+							{ x: new Date(2017, 12), y: 67 }
+						]
+					},
+					{
+						name: "Loss",
+						showInLegend: true,
+						legendMarkerType: "square",
+						type: "area",
+						color: "rgba(255,0,0,0.7)",
+						markerSize: 0,
+						dataPoints: [
+							{ x: new Date(2017, 0), y: 5 },
+							{ x: new Date(2017, 1), y: 5 },
+							{ x: new Date(2017, 2), y: 11 },
+							{ x: new Date(2017, 3), y: 13 },
+							{ x: new Date(2017, 4), y: 15 },
+							{ x: new Date(2017, 5), y: 14 },
+							{ x: new Date(2017, 6), y: 8 },
+							{ x: new Date(2017, 7), y: 8 },
+							{ x: new Date(2017, 8), y: 14 },
+							{ x: new Date(2017, 9), y: 18 },
+							{ x: new Date(2017, 10), y: 8 },
+							{ x: new Date(2017, 11), y: 12 },
+							{ x: new Date(2017, 12), y: 9 }
+						]
+					}
+				]
 			});
 			chart.render();
 
